# FinEngine

./: .gitignore  README.md  myself.py
backend/: .dockerignore  .env.example  BACKUP_GUIDE.md  DEPLOYMENT_CHECKLIST.md  DOCKER_GUIDE.md  Dockerfile  Dockerfile.worker  OPTIMIZATION_RECOMMENDATIONS.md  SECURITY_SETUP.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt.bak  test_date_format.py  test_quota_api.py
backend/alembic/: env.py
backend/alembic/versions/: 001_init.py  002_platform_hierarchy.py  003_shop_color.py  004_user_single_active_session.py  005_user_active_session_device.py  006_add_org_quota_fields.py  007_update_storage_quota_to_1gb.py  008_transaction_accounting.py  009_global_transaction_accounting_rules.py  010_cash_flow_items.py  011_add_summary_paid_refund_amounts.py  012_bic_accounting.py  013_shared_upload_dispatch_followup.py  014_add_user_must_change_password.py  015_shop_id_accounting_business_keys.py  016_transaction_rule_scene_support.py  017_shop_profile_fields.py  018_drop_shop_entity_name.py  019_transaction_rule_remark_exclude.py  020_bic_service_provider.py  (+38 more)
backend/app/: main.py
backend/deploy/: README.md  env.production.example  init_backend.sh  install_backend.sh  load_deploy_env.sh  start_api.sh  start_flower.sh  start_worker.sh  update_backend.sh
backend/scripts/: backfill_douyin_detail_product_code.py  backup_database.sh  clear_source_detail_rows.py  debug_worker.py  ensure_reconciliation_checklist_partitions.py  ensure_source_partitions.py  recalculate_storage.py  repair_reconciliation_checklist_partitions.py  restore_database.sh  seed_cash_flow_items.py  seed_category_dicts.py  seed_file_specs.py  seed_platforms.py  seed_transaction_accounting_defaults.py  seed_transaction_major_subjects.py  seed_users.py  summarize_douyin_accounting.py
(+365 files in other folders)
